fix: changed vertical section overflow animations styles (#218)

--- a/src/components/VerticalSectionOverflow/styles.scss
+++ b/src/components/VerticalSectionOverflow/styles.scss
@@ -1,8 +1,16 @@
 @import "../../styles/colors";
 @import "../../styles/font-sizes";
 
+@mixin animation-properties($animation) {
+    transition: $animation;
+    -webkit-transition: $animation;
+    -moz-transition: $animation;
+    -ms-transition: $animation;
+    -o-transition: $animation;
+}
+
 .rainbow-vertical-section-overflow_container {
-    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+    @include animation-properties(all 0.45s cubic-bezier(0.23, 1, 0.32, 1) 0ms);
 
     .rainbow-nav-vertical__action {
         padding: 0.75rem 0.5rem 0.75rem 2.875rem;
@@ -35,6 +43,8 @@
     -ms-user-select: none;
     user-select: none;
 
+    @include animation-properties(all 0.15s cubic-bezier(0.4, 0, 0.2, 1));
+
     &:focus {
         outline: 0;
         background-color: $color-gray-1;
@@ -46,30 +56,32 @@
 }
 
 .rainbow-vertical-section-overflow--show {
-    transition: all 0.2s ease-out;
-    -webkit-transition: all 0.2s ease-out;
-    -moz-transition: all 0.2s ease-out;
-    -ms-transition: all 0.2s ease-out;
-    -o-transition: all 0.2s ease-out;
+    opacity: 1;
 
-    .rainbow-vertical-item_action {
-        padding: 0.5rem 0.5rem 0.5rem 3.5rem;
-    }
-
-    .rainbow-vertical-item_icon {
-        top: 0.75rem;
-        left: 2rem;
-    }
+    @include animation-properties((
+        opacity 0.15s cubic-bezier(0.4, 0, 0.2, 1),
+        max-height 0.15s cubic-bezier(0.4, 0, 0.2, 1)
+    ));
 }
 
 .rainbow-vertical-section-overflow--hide {
     max-height: 0;
     overflow: hidden;
-    transition: 0.4s;
-    -webkit-transition: 0.4s;
-    -moz-transition: 0.4s;
-    -ms-transition: 0.4s;
-    -o-transition: 0.4s;
+    opacity: 0;
+
+    @include animation-properties((
+        opacity 0.15s cubic-bezier(0.4, 0, 0.2, 1),
+        max-height 0.15s cubic-bezier(0.4, 0, 0.2, 1)
+    ));
+}
+
+.rainbow-vertical-item_action {
+    padding: 0.5rem 0.5rem 0.5rem 3.5rem;
+}
+
+.rainbow-vertical-item_icon {
+    top: 0.75rem;
+    left: 2rem;
 }
 
 .rainbow-vertical-section-overflow_action-text {
@@ -89,7 +101,8 @@
     font-size: $font-size-text-x-small;
     line-height: 1rem;
     color: $color-gray-3;
-    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+
+    @include animation-properties(all 0.15s cubic-bezier(0.23, 1, 0.32, 1) 0ms);
 }
 
 .rainbow-vertical-section-overflow_action-description--expanded {
@@ -100,10 +113,12 @@
     margin-left: 0.5rem;
     margin-top: 0.625rem;
     transform: rotate(0deg);
-    transition: transform 0.15s linear;
+
+    @include animation-properties(transform 0.15s linear);
 }
 
 .rainbow-vertical-section-overflow-icon--expanded {
     transform: rotate(-180deg);
-    transition: transform 0.15s linear;
+
+    @include animation-properties(transform 0.15s linear);
 }
